# fortunia

./: .env.example  .gitignore  ARCHITECTURE.md  BACKUP_RESTORE.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  TESTING.md  TROUBLESHOOTING.md  docker-compose.yml  install.sh
api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
api/alembic/: env.py
api/alembic/versions/: 0001_add_users_income_type.py  0002_drop_raw_messages_telegram_id_unique.py  0003_seed_default_categories.py
api/app/: __init__.py  config.py  db.py  deps.py  main.py
api/app/classifiers/: __init__.py  category_rules.py  intent_detector.py  llm_fallback.py
api/app/models/: __init__.py  attachment.py  base.py  category.py  expense.py  intent_feedback.py  merchant.py  raw_message.py  user.py
api/app/parsers/: __init__.py  audio_parser.py  normalizer.py  receipt_parser.py  text_parser.py
api/app/routers/: admin.py  categories.py  expenses.py  ingest.py  reports.py
api/app/schemas/: __init__.py  expense.py  reports.py
api/app/services/: ocr_client.py  whisper_client.py
api/sql/: init.sql
api/tests/: __init__.py  conftest.py  test_audio_parser.py  test_expense_endpoints.py  test_ingest_endpoints.py  test_ingest_endpoints_full.py  test_intent_detector.py  test_intent_detector_income.py  test_normalizer.py  test_receipt_parser.py  test_report_endpoints.py  test_text_parser.py
dashboard/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
(+40 files in other folders)
