[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortunia-api"
version = "0.1.0"
description = "Personal finance sub-agent for OpenClaw"
requires-python = ">=3.11"
authors = [
    { name = "Raúl E. Linares N.", email = "linaresnavas@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg[binary]==3.2.3",
    "alembic==1.13.1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "pillow==10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "ruff==0.1.9",
    "mypy==1.7.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
